[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 120
skip-string-normalization = true


[tool.pyright]
include = [
    "asyncify"
]
exclude = [
    "**/__pycache__",
    "dist",
    "docs"
]
reportUnnecessaryTypeIgnoreComment = "warning"
reportUnknownVariableType = "information"
pythonVersion = "3.10"
typeCheckingMode = "strict"