[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 120
skip-string-normalization = true
target-version = ["py37", "py38", "py39", "py310"]


[tool.pyright]
include = [
    "asyncify"
]
exclude = [
    "**/__pycache__",
    "dist",
    "docs"
]
reportUnnecessaryTypeIgnoreComment = "warning"
reportUnknownVariableType = "information"
pythonVersion = "3.7"
typeCheckingMode = "strict"